--- a/views/consumerDashboard.html
+++ b/views/consumerDashboard.html
@@ -128,6 +128,9 @@
             <a class="page-link" id="nextPage" href="#">Next</a>
           </li>
         </ul>
+        <div id="logout">
+            <input type="button" value="Logout" onclick="logoutConsumer()">
+        </div>
       </nav>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
