--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sidebar 01</title>
+    <title>Admin Dashboard</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -94,37 +94,16 @@
                 href="#"
                 onclick="showTab('pendingMoreThan3Months')"
                 id="pendingMoreThan3MonthsBills"
-                >More Than Three Month Pendings</a
+                >Three Month Pending</a
               >
             </li>
           </ul>
-
-          <!-- <ul class="collapse list-unstyled" id="pageSubmenu">
-                <li>
-                  <a href="#">Page 1</a>
-                </li>
-                <li>
-                  <a href="#">Page 2</a>
-                </li>
-                <li>
-                  <a href="#">Page 3</a>
-                </li>
-              </ul> -->
 
           <div
             class="footer fixed-bottom mx-2 font-weight-bolder "
             margin
             id="foot-admin"
           >
-            <!-- <p>
-              Copyright &copy;
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              All rights reserved | This template is made with
-              <i class="icon-heart" aria-hidden="true"></i> 
-              <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-            </p> -->
           </div>
         </div>
       </nav>
@@ -156,20 +135,20 @@
         <div class="admin-content" id="allContent">
           <h2 class="mb-4">All Bills</h2>
           <table
-            class="table table-bordered table-responsive-sm"
+            class="table table-bordered table-responsive-sm "
             id="datatablesSimpleBill"
           >
             <thead>
-              <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Meter No.</th>
-                <th>Bill ID</th>
-                <th>Amount</th>
-                <th>Consumption Units</th>
-                <th>Billing Date</th>
-                <th>Due Date</th>
-                <th>Payment Date</th>
+              <tr >
+                <th class="text-center">UserName</th>
+                <th class="text-center">User ID</th>
+                <th class="text-center">Meter No.</th>
+                <th class="text-center">Bill ID</th>
+                <th class="text-center">Amount</th>
+                <th class="text-center">Consumption Units</th>
+                <th class="text-center">Billing Date</th>
+                <th class="text-center">Due Date</th>
+                <th class="text-center">Payment Date</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -183,14 +162,14 @@
           >
             <thead>
               <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Meter No.</th>
-                <th>Bill ID</th>
-                <th>Amount</th>
-                <th>Consumption Units</th>
-                <th>Billing Date</th>
-                <th>Payment Date</th>
+                <th class="text-center">UserName</th>
+                <th class="text-center">User ID</th>
+                <th class="text-center">Meter No.</th>
+                <th class="text-center">Bill ID</th>
+                <th class="text-center">Amount</th>
+                <th class="text-center">Consumption Units</th>
+                <th class="text-center">Billing Date</th>
+                <th class="text-center">Payment Date</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -204,14 +183,14 @@
           >
             <thead>
               <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Meter No.</th>
-                <th>Bill ID</th>
-                <th>Amount</th>
-                <th>Consumption Units</th>
-                <th>Billing Date</th>
-                <th>Due Date</th>
+                <th class="text-center">UserName</th>
+                <th class="text-center">User ID</th>
+                <th class="text-center">Meter No.</th>
+                <th class="text-center">Bill ID</th>
+                <th class="text-center">Amount</th>
+                <th class="text-center">Consumption Units</th>
+                <th class="text-center">Billing Date</th>
+                <th class="text-center">Due Date</th>
               </tr>
             </thead>
             <tbody id="paid-user"></tbody>
@@ -226,13 +205,12 @@
           >
             <thead>
               <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Phone No.</th>
-                <th>User Type</th>
-                <th>Pending Months</th>
-                <!-- <th>Payment Date</th> -->
-                <th>Info</th>
+                <th class="text-center">UserName</th>
+                <th class="text-center">User ID</th>
+                <th class="text-center">Phone No.</th>
+                <th class="text-center">User Type</th>
+                <th class="text-center">Pending Months</th>
+                <th class="text-center">Info</th>
               </tr>
             </thead>
             <tbody id="paid-user"></tbody>
@@ -246,13 +224,11 @@
           >
             <thead>
               <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Phone No.</th>
-                <th>User Type</th>
-                <th>Pending Months</th>
-                <!-- <th>Payment Date</th> -->
-                <!-- <th>Info</th> -->
+                <th class="text-center">User ID</th>
+                <th class="text-center">UserName</th>
+                <th class="text-center">Phone No.</th>
+                <th class="text-center">User Type</th>
+                <th class="text-center">Pending Months</th>
               </tr>
             </thead>
             <tbody id="paid-user"></tbody>
@@ -266,13 +242,11 @@
           >
             <thead>
               <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Phone No.</th>
-                <th>User Type</th>
-                <th>Pending Months</th>
-                <!-- <th>Due Date</th> -->
-                <!-- <th>Info</th> -->
+                <th class="text-center">UserName</th>
+                <th class="text-center">User ID</th>
+                <th class="text-center">Phone No.</th>
+                <th class="text-center">User Type</th>
+                <th class="text-center">Pending Months</th>
               </tr>
             </thead>
             <tbody id="not-paid"></tbody>
@@ -286,13 +260,12 @@
           >
             <thead>
               <tr>
-                <th>UserName</th>
-                <th>User ID</th>
-                <th>Phone No.</th>
-                <th>User Type</th>
-                <th>Pending Months</th>
-                <!-- <th>Due Date</th> -->
-                <th>Disable/Enable</th>
+                <th class="text-center">UserName</th>
+                <th class="text-center">User ID</th>
+                <th class="text-center">Phone No.</th>
+                <th class="text-center">User Type</th>
+                <th class="text-center">Pending Months</th>
+                <th class="text-center">Disable/Enable</th>
               </tr>
             </thead>
             <tbody id="3-month"></tbody>
@@ -315,7 +288,7 @@
                   <!-- Place your user details content here -->
                   <table class="table table-striped-columns">
                       <thead>
-                          <th>User Details</th>
+                          <th class="text-center">User Details</th>
                       </thead>
                       <tbody id="userDetailsModal">
                           
@@ -336,10 +309,7 @@
                     <input type="button" name="button" id="button" value="Cancel" class="btn btn-danger" onclick="cancelUser()"></td>
                     </tr>
                 </table>
-
               </div>
-
-
               <div class="modal-footer">
                 
                   <!-- You can place buttons here if needed -->
@@ -353,30 +323,13 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../js/popper.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
     <script src="../js/datatables.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script> -->
     <script src="../js/dashboard.js"></script>
     <!-- <script src="../js/jquery.min.js"></script> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-    <!-- <script src="https://cdn.datatables.net/1.11.10/js/jquery.dataTables.min.js"></script> -->
     <!-- <script src="../js/popper.js"></script> -->
     <!-- <script src="../js/bootstrap.min.js"></script> -->
     <script src="../js/main.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script> -->
     <!-- <script src="../datatables.min.js"></script> -->
     <!-- <script src="../js/dashboard.js"></script> -->
-    <!-- <script
-      defer
-      src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854"
-      integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg=="
-      data-cf-beacon='{"rayId":"7f3528373ca73c00","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2023.7.0","si":100}'
-      crossorigin="anonymous"
-    ></script> -->
-
-    <script>
-
-
-    </script>
   </body>
 </html>
