--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -28,9 +28,22 @@
             class="img logo rounded-circle mb-5"
             style="background-image: url(../images/unknown.jpg)"
           ></a>
+          <li class="text-center list-unstyled">
+            <a href="#admin"
+            data-toggle="collapse"
+            aria-expanded="false"
+             class="text-center font-weight-bolder list-unstyled"
+             >
+             ADMIN
+            </a>
+          </li>
           <ul class="collapse list-unstyled" id="admin">
             <li>
-              <a href="#" class="text-center font-weight-bolder">ADMIN</a>
+              <a 
+              href="#" 
+              class="text-center font-weight-bolder" 
+              onclick="consumerDash()"
+              >Consumer Page</a>
             </li>
 
             <div class="container" id="adminUser"></div>
