--- a/views/adminLogin.html
+++ b/views/adminLogin.html
@@ -12,7 +12,7 @@
 <body>
   <div class="login-container">
     <form class="login-form">
-      <div class="login-header">User Login</div>
+      <div class="login-header">Login</div>
       <div class="form-group">
         <input type="tel" id="phone" class="form-input" placeholder="Phone Number" required>
         <div class="invalid-feedback" id="phoneFeedback">Phone Number is required.</div>
