--- a/views/consumerDashboard.html
+++ b/views/consumerDashboard.html
@@ -110,62 +110,23 @@
         <div class="col-lg-9" class="tablist">
           <h3>List of Bills</h3>
           <br />
-          <table class="table table-responsive-lg " id="datatables">
+          <table  class="table table-bordered table-responsive-sm" id="datatables">
             <thead>
               <tr>
-                <th scope="col">Month</th>
-                <th scope="col">Unit Consumed</th>
-                <th scope="col">Amount</th>
-                <th scope="col">Status</th>
-                <th scope="col">Payment</th>
-                <th scope="col">BillView</th>
-              </tr>
-            </thead>
-            <tbody id="billTable">
-            </tbody>
-          </table>
-          <!-- <div class="admin-content" id="pendingUserContent">
-            <h2 class="mb-4"></h2>
-            <table
-              class="table table-bordered table-responsive-sm"
-              id="datatables"
-            >
-              <thead>
-                <tr>
-                  <th class="text-center">Sl.NO</th>
-                  <th class="text-center">Month</th>
+                <th class="text-center">Month</th>
                   <th class="text-center">Unit Consumed</th>
                   <th class="text-center">Amount</th>
                   <th class="text-center">Status</th>
                   <th class="text-center">Payment</th>
                   <th class="text-center">BillView</th>
-                </tr>
-              </thead>
-              <tbody id="consumerBills">
-
-              </tbody>
-            </table>
-          </div> -->
+              </tr>
+            </thead>
+            <tbody id="billTable">
+            </tbody>
+          </table>
         </div>
       </div>
-      
-
-      <!-- <nav aria-label="Page navigation example" id="pagination">
-        <ul class="pagination justify-content-end">
-          <li class="page-item">
-            <a class="page-link" id="prevPage" href="#">Previous</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" id="page1" href="#">1</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" id="page2" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" id="nextPage" href="#">Next</a>
-          </li>
-        </ul>
-      </nav> -->
+      </nav>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
