--- a/views/consumerDashboard.html
+++ b/views/consumerDashboard.html
@@ -30,8 +30,8 @@
   </head>
   <body onload="consumerDashboard()">
     <div class="welcome container d-flex justify-content-between  align-items-center">
-        <h4>Welcome</h4>
-        <button class="btn btn-danger" onclick="logoutConsumer()">logout</button>
+        <h4>WELCOME TO BESCOM</h4>
+        <button class="btn btn-danger" onclick="logoutConsumer()">Logout</button>
     </div>
     <div class="container">
       <div class="row">
