--- a/views/bill.html
+++ b/views/bill.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BESCOM Bill</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/bill.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/bill.css">
   </head>
   <body onload="displayBill()">
     <div class="container">
@@ -16,7 +17,7 @@
         <div class="border-bottom" id="details" >
             <p>Account Number:<span class="xyz" id="accountNumber"></span></p>
             <p>Customer Name :<span class="xyz" id="customerName"></span></p>
-            <p>Customer Address :<span class="xyz" id="customerAddress"></span></p>
+            <p>Customer Address :<span   id="customerAddress"></span></p>
         </div>
         <div class="border-bottom" id="details" >
             <p>Bill Number : <span class="xyz" id="billNumber"></span></p>
@@ -27,7 +28,7 @@
         <h6 class="text-center py-2">Fixed-Charges</h6>
         
         <div class="d-flex justify-content-center align-items-center" id="fixedCharge" >
-            <table class="table text-center table-responsive">
+            <table class="table text-center">
                 <thead>
                     <tr>
                         <th>Unit</th>
@@ -46,7 +47,7 @@
         </div>
         <h6 class="text-center">Energy-Charges</h6>
         <div class="border-bottom d-flex justify-content-center align-items-center" id="energyCharge" >
-            <table class="table text-center table-responsive">
+            <table class="table text-center">
                 <thead>
                     <tr>
                         <th>Unit</th>
@@ -93,7 +94,7 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/bill.js"></script>
 </body>
 </html>
