--- a/views/consumerDashboard.html
+++ b/views/consumerDashboard.html
@@ -113,6 +113,7 @@
           <table  class="table table-bordered table-responsive-sm" id="datatables">
             <thead>
               <tr>
+                <th class="text-center">Sl.No</th>
                 <th class="text-center">Month</th>
                   <th class="text-center">Unit Consumed</th>
                   <th class="text-center">Amount</th>
